Done with the search bar in the navigation bar

--- a/homeConnected.html
+++ b/homeConnected.html
@@ -14,7 +14,8 @@
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.css">
-    <link href="/your-path-to-fontawesome/css/fontawesome.css" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="bootstrap/css/bootstrap-grid.css">
     <link rel="stylesheet" href="bootstrap/css/bootstrap-reboot.css"> -->
 
@@ -35,8 +36,8 @@
                 <input type="search" class="form-control rounded-pill mr-2 search" placeholder="Search..."
                     aria-label="Search">
                 <span class="input-group-button">
-                    <button class="btn btn-info btn-lg">
-                        
+                    <button class="btn btn-lg custom-btn-search">
+                        <span class="fa fa-search"></span>
                     </button>
                 </span>
             </form>
