Added somes features (charts, last expenses, charts for category...), checkpoint: budget evaluation, charts...

--- a/homeConnected.html
+++ b/homeConnected.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.css">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/4ffb3767a3.js" crossorigin="anonymous"></script>
     <!-- <link rel="stylesheet" href="bootstrap/css/bootstrap-grid.css">
     <link rel="stylesheet" href="bootstrap/css/bootstrap-reboot.css"> -->
 
@@ -95,36 +96,189 @@
         </div>
         <div class="page-content">
             <main>
-                <div class="container-fluid">
+                <div class="container-fluid mt-2">
+
                     <div class="row">
-                        <div class="col-sm-4">
-                          <div class="component-bg my-2 p-2">
-                                bghcnfhh,vhv bvhjv v hvvvhhhh
-                                hvdsh hbs nbshb nsbjbs nvbshb
-                                bjbs njbsj nbsb jbsjb nmbsjbjs
-                                jsb mnsjb msbjjskb jbsjsbjks
-                                bghcnfhh,vhv bvhjv v hvvvhhhh
+                        <div class="col-lg-12 col-sm-12 ">
+                            <div class="component-bg p-0 custom-border-bottom">
+                                <p class="h5 text-title font-weight-normal d-flex justify-content-between p-2 my-auto ">
+                                    <span class="my-auto">Dashboard</span>
+                                    <span class="h6 my-auto link">September 21</span>
+                                </p>
                             </div>
-                        </div>
-                        <div class="col-sm-4">
-                            <div class="component-bg my-2 p-2">
-                                bghcnfhh,vhv bvhjv v hvvvhhhh
-                                hvdsh hbs nbshb nsbjbs nvbshb
-                                bjbs njbsj nbsb jbsjb nmbsjbjs
-                                jsb mnsjb msbjjskb jbsjsbjks
-                                bghcnfhh,vhv bvhjv v hvvvhhhh
-                            </div>
-                        </div>
-                        <div class="col-sm-4">
-                           <div class="component-bg my-2 p-2">
-                               bghcnfhh,vhv bvhjv v hvvvhhhh
-                               hvdsh hbs nbshb nsbjbs nvbshb
-                               bjbs njbsj nbsb jbsjb nmbsjbjs
-                               jsb mnsjb msbjjskb jbsjsbjks
-                               bghcnfhh,vhv bvhjv v hvvvhhhh
-                           </div>
+
                         </div>
                     </div>
+
+                    <div class="row">
+                        <div class="col-md-3 col-sm-6 col-lg-4 col-xl-3">
+                            <div class="card component-bg mt-4">
+                                <div class="row no-gutters">
+                                    <div class="col-4 my-auto p-auto">
+                                        <div class="d-flex justify-content-start ml-3 pb-n-4">
+                                            <i class="fas fa-hand-holding-usd text-success"></i>
+                                        </div>
+                                    </div>
+                                    <div class="col-8">
+                                        <div class="card-body ml-2">
+                                            <p class="card-title text-title font-weight-bold">Incomes</p>
+                                            <p class="card-text text-success">$ 5 000</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="card-footer navbar-bg">
+                                    <a href="#"><span class="d-flex justify-content-center">ADD INCOMES</span></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6 col-lg-4 col-xl-3">
+                            <div class="card component-bg mt-4">
+                                <div class="row no-gutters">
+                                    <div class="col-4 my-auto p-auto">
+                                        <div class="d-flex justify-content-start ml-3 pb-n-4">
+                                            <i class="fas fa-dollar-sign text-danger"></i>
+                                        </div>
+                                    </div>
+                                    <div class="col-8">
+                                        <div class="card-body ml-2">
+                                            <p class="card-title text-title font-weight-bold">Expenses</p>
+                                            <p class="card-text text-danger">$ 1 700</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="card-footer navbar-bg">
+                                    <a href="#"><span class="d-flex justify-content-center">ADD EXPENSES</span></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6 col-lg-4 col-xl-3">
+                            <div class="card component-bg mt-4">
+                                <div class="row no-gutters">
+                                    <div class="col-4 my-auto p-auto">
+                                        <div class="d-flex justify-content-start ml-3 pb-n-4">
+                                            <i class="fas fa-file-invoice-dollar text-warning"></i>
+                                        </div>
+                                    </div>
+                                    <div class="col-8">
+                                        <div class="card-body ml-2">
+                                            <p class="card-title text-title font-weight-bold">Budget</p>
+                                            <p class="card-text text-warning">$ 3 000</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="card-footer navbar-bg">
+                                    <a href="#"><span class="d-flex justify-content-center">NEW BUDGET</span></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6 col-lg-4 col-xl-3">
+                            <div class="card component-bg mt-4">
+                                <div class="row no-gutters">
+                                    <div class="col-4 my-auto p-auto">
+                                        <div class="d-flex justify-content-start ml-3 pb-n-4">
+                                            <i class="fas fa-coins text-primary"></i>
+                                        </div>
+                                    </div>
+                                    <div class="col-8">
+                                        <div class="card-body ml-2">
+                                            <p class="card-title text-title font-weight-bold">Economy</p>
+                                            <p class="card-text text-primary">$ 3 300</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="card-footer navbar-bg">
+                                    <a href="#"><span class="d-flex justify-content-center">VIEW HISTORY</span></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Statistics section -->
+                    <div class="row">
+                        <div class=" d-none d-md-block col-12 mt-3">
+                            <div class="card d-flex justify-content-center component-bg">
+                                <div class="navbar-bg card-header my-auto d-flex justify-content-between">
+                                    <p class="text-title h5 my-auto d-inline">Charts</p>
+                                    <p class="text-info my-auto d-inline">Expenses by month</p>
+                                </div>
+                                <img class="img-fluid img-responsive m-3" src="icon/chart1.png" alt="Charts 1">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Last Expensses section -->
+                    <div class="row">
+
+                        <div class="col-sm-7 col-md-8 mt-3">
+                            <table class="table table-border table-striped component-bg table-borderless">
+                                <thead class="navbar-bg">
+                                        <tr>
+                                            <th scope="col" colspan="3">
+                                                <span class="h5 text-color d-flex justify-content-center rounded">Last Expenses</span>
+                                            </th>
+                                        </tr>
+                                </thead>
+                                <tbody style="font-size: 1.1rem;">
+                                    <tr>
+                                        <td colspan="2">
+                                           <span class="text-color">School Month / School</span>
+                                        </td>
+                                        <td>
+                                           <span class="text-danger">3005.6 $</span>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td colspan="2">
+                                            <span class="text-color">Water / Bill</span>
+                                        </td>
+                                        <td>
+                                            <span class="text-danger">165 $ </span>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td colspan="2">
+                                            <span class="text-color">Rice / Ingredients</span>
+                                        </td>
+                                        <td>
+                                            <span class="text-danger">300 $</span>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td colspan="2">
+                                            <span class="text-color">Concho / Transport</span>
+                                        </td>
+                                        <td>
+                                            <span class="text-danger">50 $</span>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td colspan="2">
+                                            <span class="text-color">Cerveza / Drink</span>
+                                        </td>
+                                        <td>
+                                            <span class="text-danger">89.5 $ </span>
+                                        </td>
+                                    </tr>
+                                    <tr class="navbar-bg">
+                                        <td colspan="3">
+                                            <a class="d-flex justify-content-end" href="#">VIEW MORE ...</a>
+                                        </td>
+                                    </tr>
+                                </tbody>
+
+                            </table>
+                        </div>
+
+                        <div class="col-sm-6 col-md-4 mt-3">
+                            <div class="card d-flex justify-content-center component-bg">
+                                <div class="navbar-bg card-header my-auto d-flex justify-content-between">
+                                    <p class="text-title h5 my-auto d-inline">Charts</p>
+                                    <p class="text-info my-auto d-inline">Expenses by Category</p>
+                                </div>
+                                <img class="img-fluid img-responsive m-3" src="icon/chart2.png" alt="Charts 2" >
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Section calcul budget -->
+
                 </div>
 
             </main>
@@ -142,7 +296,7 @@
 
     <script src="bootstrap/dist/js/bootstrap.min.js"></script>
 
-    <script src="organizExpenses.js"></script>
+    <script src="side-menu.js"></script>
 </body>
 
 </html>
