--- a/homeNotConnected.html
+++ b/homeNotConnected.html
@@ -26,7 +26,7 @@
     <!-- Container of the page -->
     <div class="container-fluid">
         <!-- header of the page -->
-        <nav class="navbar navbar-expand-sm navbar-light custom-toggler navbar-bg">
+        <nav class="navbar fixed-top navbar-expand-md navbar-light custom-toggler navbar-bg">
             <a href="#" class="nav-brand title">OrganizExpenses</a>
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
                 <span class="navbar-toggler-icon"></span>
@@ -44,7 +44,7 @@
 
         </nav>
         <!-- body: form o Login and signup -->
-        <div class="login-container d-flex align-items-top justify-content-center mx-auto mt-5">
+        <div class="login-container d-flex align-items-center justify-content-center mx-auto mt-5">
             <div class="form">
                 <form class="register-form text-center">
                     <div class="form-group">
@@ -59,8 +59,8 @@
                             placeholder="Email Address" />
                     </div>
                     <button type="submit" class="btn mt-4 btn-custom btn-block rounded-pill btn-lg">Sign Up</button>
-                    <p class="mt-3 font-weigth-normal text-color">Already have an account <a class="login"
-                            href="#">Sign in</a>
+                    <p class="mt-3 font-weigth-normal text-color">Already have an account <a class="login" href="#">Sign
+                            in</a>
                     </p>
                 </form>
 
@@ -76,28 +76,29 @@
                         <a href="#">Forgot Password</a>
                     </div>
                     <button type="submit" class="btn mt-4 btn-custom btn-block rounded-pill btn-lg">login</button>
-                    <p class="mt-3 font-weigth-normal text-color">Don't have an account <a class="register" href="#">Register now</a></p>
+                    <p class="mt-3 font-weigth-normal text-color">Don't have an account <a class="register"
+                            href="#">Register now</a></p>
                 </form>
             </div>
         </div>
     </div>
     <!-- Footer  -->
     <footer class="footer">
-                <div class="d-flex justify-content-center text-center footer-line mx-3">
-                    <p class="mt-2 custom-mb"><a href="#">About</a></p>
-                </div>
-                <div class="d-flex justify-content-center text-center footer-line mx-3">
-                    <p class="mt-2 custom-mb"><a href="#">Terms & Uses</a></p>
-                </div>
-            
-                <div class="d-flex justify-content-center text-center footer-line mx-3">
-                    <p class="text-color mt-2">Yves Gervens Constant * dattech@gmail.com</p>
-                </div>
-                <div class="d-flex justify-content-center text-center mt-n3">
-                    <p class="text-white-50 mt-2">© Copyright 2019</p>
-                </div>
-           
-        </footer>
+        <div class="d-flex justify-content-center text-center footer-line mx-3">
+            <p class="mt-2 custom-mb"><a href="#">About</a></p>
+        </div>
+        <div class="d-flex justify-content-center text-center footer-line mx-3">
+            <p class="mt-2 custom-mb"><a href="#">Terms & Uses</a></p>
+        </div>
+
+        <div class="d-flex justify-content-center text-center footer-line mx-3">
+            <p class="text-color mt-2">Yves Gervens Constant * dattech@gmail.com</p>
+        </div>
+        <div class="d-flex justify-content-center text-center mt-n3">
+            <p class="text-white-50 mt-2">© Copyright 2019</p>
+        </div>
+
+    </footer>
 
     </div>
 
