Done at 80 % with the design... Footer credit not added

--- a/homeConnected.html
+++ b/homeConnected.html
@@ -277,8 +277,170 @@
                             </div>
                         </div>
                     </div>
-                    <!-- Section calcul budget -->
 
+                    <!-- Section last earnings -->
+
+                    <div class="row">
+
+                        <div class="col-sm-7 col-md-8 mt-3">
+                            <table class="table table-striped component-bg table-borderless">
+                                <thead class="navbar-bg">
+                                    <tr>
+                                        <th scope="col" colspan="3">
+                                            <span class="h5 text-color d-flex justify-content-center rounded">Last
+                                                Earnings</span>
+                                        </th>
+                                    </tr>
+                                </thead>
+                                <tbody style="font-size: 1.1rem;">
+                                    <tr>
+                                        <td colspan="2">
+                                            <span class="text-color">Month transfert / Transfert</span>
+                                        </td>
+                                        <td>
+                                            <span class="text-success">100 $ USD</span>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td colspan="2">
+                                            <span class="text-color">Gift of a friend / Cash</span>
+                                        </td>
+                                        <td>
+                                            <span class="text-success">250 $ </span>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td colspan="2">
+                                            <span class="text-color">Money for Internet / Transfert</span>
+                                        </td>
+                                        <td>
+                                            <span class="text-success">40 $ USD</span>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td colspan="2">
+                                            <span class="text-color">Tatie Transfert / Transfert</span>
+                                        </td>
+                                        <td>
+                                            <span class="text-success">50 $ USD</span>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td colspan="2">
+                                            <span class="text-color">Work / Bank Account</span>
+                                        </td>
+                                        <td>
+                                            <span class="text-success">50 $ USD </span>
+                                        </td>
+                                    </tr>
+                                    <tr class="navbar-bg">
+                                        <td colspan="3">
+                                            <a class="d-flex justify-content-end" href="#">VIEW MORE ...</a>
+                                        </td>
+                                    </tr>
+                                </tbody>
+
+                            </table>
+                        </div>
+
+                        <div class="col-sm-6 col-md-4 mt-3 mb-4">
+                            <div class="card d-flex justify-content-center component-bg">
+                                <div class="navbar-bg card-header my-auto d-flex justify-content-between">
+                                    <p class="text-title h5 my-auto d-inline">Charts</p>
+                                    <p class="text-info my-auto d-inline">Earnings by Category</p>
+                                </div>
+                                <img class="img-fluid img-responsive m-3" src="icon/chart3.png" alt="Charts 2">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Total money, total bill, and tax of change -->
+                    <div class="row">
+                        <div class="col-sm-12 col-md-4 col-lg-4 mt3">
+                            <table class="table table-striped table-borderless component-bg">
+                                <thead class="navbar-bg">
+                                    <tr>
+                                        <td><span class="text-title">Total Account</span></td>
+                                        <td><span class="link">100 $USD</span></td>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td><span class="text-color">Cash</span></td>
+                                        <td><span class="text-success">60 $ USD</span></td>
+                                    </tr>
+                                     <tr>
+                                         <td><span class="text-color">Bank Account</span></td>
+                                         <td><span class="text-success">20 $ USD</span></td>
+                                     </tr>
+                                     <tr>
+                                         <td><span class="text-color">Debit card</span></td>
+                                         <td><span class="text-success">20 $ USD</span></td>
+                                     </tr>
+                                     <tr>
+                                         <td><span class="text-color">Check</span></td>
+                                         <td><span class="text-success">0.00 $</span></td>
+                                     </tr>
+                                </tbody>
+                            </table>
+                        </div>
+
+                        <div class="col-sm-12 col-md-4 col-lg-4 mt3">
+                            <table class="table table-striped table-borderless component-bg">
+                                <thead class="navbar-bg">
+                                    <tr>
+                                        <td><span class="text-title">Monthly Total Bill</span></td>
+                                        <td colspan="1"><span class="link">3233.33 $</span></td>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td><span class="text-color">House</span></td>
+                                        <td><span class="text-success">2500 $</span></td>
+                                    </tr>
+                                    <tr>
+                                        <td><span class="text-color">Electricity</span></td>
+                                        <td><span class="text-warning">250 $</span></td>
+                                    </tr>
+                                    <tr>
+                                        <td><span class="text-color">Water</span></td>
+                                        <td><span class="text-warning">333.33 $ </span></td>
+                                    </tr>
+                                    <tr>
+                                        <td><span class="text-color">Internet</span></td>
+                                        <td><span class="text-warning">200 $</span></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+
+                        <div class="col-sm-12 col-md-4 col-lg-4 mt3">
+                            <table class="table table-striped table-borderless component-bg">
+                                <thead class="navbar-bg">
+                                    <tr>
+                                        <td colspan="2"><span class="text-title d-flex justify-content-center">Tax of change</span></td>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td><span class="text-title">$ USD</span></td>
+                                        <td><span class="text-color">51.90 $</span></td>
+                                    </tr>
+                                    <tr>
+                                        <td><span class="text-title">€ Euro</span></td>
+                                        <td><span class="text-color">56.70 $</span></td>
+                                    </tr>
+                                    <tr>
+                                        <td><span class="text-title">$ Haitian</span></td>
+                                        <td><span class="text-color">3.75 $</span></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+
+
+                    </div>
+
+                    <!--/End of container -->
                 </div>
 
             </main>
