--- a/homeConnected.html
+++ b/homeConnected.html
@@ -62,13 +62,13 @@
             <div class="sidebar" id="toggler">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a href="#" class="nav-link">
+                        <a href="homeConnected.html" class="nav-link">
                             <span class="fa fa-home"></span>
                             <span class="text">Home</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">
+                        <a href="budget.html" class="nav-link">
                             <span class="fa fa-usd"></span>
                             <span class="text">Budget</span>
                         </a>
@@ -207,7 +207,7 @@
                     <!-- Last Expensses section -->
                     <div class="row">
 
-                        <div class="col-sm-7 col-md-8 mt-3">
+                        <div class="col-sm-12 col-md-8 mt-3">
                             <table class="table table-border table-striped component-bg table-borderless">
                                 <thead class="navbar-bg">
                                         <tr>
@@ -267,7 +267,7 @@
                             </table>
                         </div>
 
-                        <div class="col-sm-6 col-md-4 mt-3">
+                        <div class="col-sm-12 col-md-4 mt-3">
                             <div class="card d-flex justify-content-center component-bg">
                                 <div class="navbar-bg card-header my-auto d-flex justify-content-between">
                                     <p class="text-title h5 my-auto d-inline">Charts</p>
@@ -282,7 +282,7 @@
 
                     <div class="row">
 
-                        <div class="col-sm-7 col-md-8 mt-3">
+                        <div class="col-sm-12 col-md-8 mt-3">
                             <table class="table table-striped component-bg table-borderless">
                                 <thead class="navbar-bg">
                                     <tr>
@@ -343,7 +343,7 @@
                             </table>
                         </div>
 
-                        <div class="col-sm-6 col-md-4 mt-3 mb-4">
+                        <div class="col-sm-12 col-md-4 mt-3 mb-4">
                             <div class="card d-flex justify-content-center component-bg">
                                 <div class="navbar-bg card-header my-auto d-flex justify-content-between">
                                     <p class="text-title h5 my-auto d-inline">Charts</p>
@@ -437,8 +437,21 @@
                             </table>
                         </div>
 
-
                     </div>
+
+                    <!-- Footer  -->
+                    
+                    <footer class="row mt-5">
+                        <div class="col-sm-12">
+                            <div class="">
+                                <hr class="navbar-bg">
+                                <p class="text-color mt-2 d-flex justify-content-center">Yves Gervens Constant * dattech@gmail.com</p>
+                                <p class="text-white-50 mt-1 d-flex justify-content-center">© Copyright 2019</p>
+                            </div>
+                            
+                        </div>
+                    </footer>
+
 
                     <!--/End of container -->
                 </div>
